[package]
name = "abc"
version = "0.1.0"
authors = ["mijinko17 <kougouseikeidansi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.1"

[[bin]]
name = "e"
path = "src/e.rs"

[[bin]]
name = "a"
path = "src/a.rs"

[[bin]]
name = "b"
path = "src/b.rs"

[[bin]]
name = "d"
path = "src/d.rs"

[[bin]]
name = "a2"
path = "src/a2.rs"
