[package]
name = "abc"
version = "0.1.0"
authors = ["mijinko17 <kougouseikeidansi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = "0.4.1"

[[hoge]]
    [[bin]]
    name = "a"
    path = "src/a.rs"
